# ProtoSwitch

./: CHANGELOG.md  Cargo.toml  README.md  RELEASE-GUIDE.md  build.rs
.github/workflows/: ci.yml  release.yml
packaging/portable/: QUICKSTART.txt
packaging/windows/: ProtoSwitch.iss  QUICKSTART.txt
scripts/: build-distribution.ps1  e2e-windows-live.ps1  package-portable.py  publish-release.ps1  render-ui-previews.py  smoke-installer.ps1  smoke-portable.ps1  smoke-unix.py
src/: app.rs  cli.rs  lib.rs  main.rs  model.rs  paths.rs  provider.rs  tdesktop.rs  telegram.rs  text.rs  tray.rs  ui.rs  windows.rs
src/app/: e2e.rs
src/platform/: linux.rs  macos.rs  mod.rs
