[package]
name = "protoswitch"
version = "0.1.0-beta.5"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "cookies", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
toml = "0.9.8"
url = { version = "2.5.7", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[dev-dependencies]
tempfile = "3.23.0"
