[package]
name = "protoswitch"
version = "0.2.0-beta.4"
edition = "2024"
build = "build.rs"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
encoding_rs = "0.8.35"
hmac = "0.12.1"
md-5 = "0.10.6"
pbkdf2 = "0.12.2"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "cookies", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha1 = "0.10.6"
sysinfo = "0.37.2"
tao = "0.34.5"
toml = "0.9.8"
tray-icon = "0.22.1"
url = { version = "2.5.7", features = ["serde"] }
image = { version = "0.25.8", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[dev-dependencies]
tempfile = "3.23.0"

[build-dependencies]
winresource = "0.1.31"
